--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,10 @@
 // app global css in SCSS form
+
+// body.body--dark {
+//     background: #000
+//   }
+
+  h4, h5, h1, h2, h3 {
+  //  margin: 48px 0 0;
+    color: gold;
+  }
